src/tests/cases/snapshots/excise__tests__cases__ui__permission_denied_when_deleting-8.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/permission_denied_when_deleting/subfolder1  ◆ COMPLETE                                                                                                             
 allocated >=#.#K   reclaim >=#.#K   apparent 4.0K   2 entries                                                                                                                                
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤│Select an entry for identity,     │
││                                                                                                                                                       ││bounds, state, and actions.       │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                      ╔ ! DELETION RESULT · PRECISE ═══════════════════════════════════════════════╗                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║deleted       0                                                             ║                   ││                                  │
││                                                      ║changed       0                                                             ║                   ││                                  │
││                                                      ║missing       0                                                             ║                   ││                                  │
││                                                      ║failed        1                                                             ║                   ││                                  │
││                                                      ║unattempted   0                                                             ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║Result is precise. [Enter/Esc] close                                        ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ╚════════════════════════════════════════════════════════════════════════════╝                   ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
└┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
